cambio de error pequeño y logica de salas service
